# Image-spoofer

./: README.md  pyproject.toml
spoofer/: cli.py
